--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,7 @@
 
 		<form action="https://api.web3forms.com/submit" method="POST">
 
-			<input type="hidden" name="access_key" value=""> <!--Your Access key here--> 
+			<input type="hidden" name="access_key" value=""> <!--Your API Access key here--> 
 
 			<div class="input-box">
 				<input type="text" name="name" placeholder="Full Name" required>
